restructure groupId to org.csc